--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ table {
 th, td {
     border: 1px dashed rgb(0, 174, 255);
     padding: 10px 10px;
-    max-width: 200px; 
+    /* max-width: 200px;  */
 }
 
 #projects td img {
